// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The GuEcsTask pattern should create the correct resources with lots of config 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuEcsTask",
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "testecstaskecstestStateMachineArnOutput": {
      "Value": {
        "Ref": "testecstaskecstestStateMachineC0B6383F",
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ecstestexecutionfailedC93F511B": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          "arn:something:else:here:we:goalarm-topic",
        ],
        "AlarmDescription": "ecs-test-TEST job failed ",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "testecstaskecstestStateMachineC0B6383F",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 3600,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ecstesttimeoutFE335653": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          "arn:something:else:here:we:goalarm-topic",
        ],
        "AlarmDescription": "ecs-test-TEST job timed out ",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "testecstaskecstestStateMachineC0B6383F",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 3600,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testecstaskecstestCluster71BC62CB": {
      "Properties": {
        "CapacityProviders": [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "Cluster": {
          "Ref": "testecstaskecstestClusterCBD4036C",
        },
        "DefaultCapacityProviderStrategy": [],
      },
      "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
    },
    "testecstaskecstestClusterCBD4036C": {
      "Properties": {
        "ClusterName": "ecs-test-cluster-TEST",
        "ClusterSettings": [
          {
            "Name": "containerInsights",
            "Value": "disabled",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "testecstaskecstestStateMachineC0B6383F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "testecstaskecstestStateMachineRoleDefaultPolicy81B8C5B5",
        "testecstaskecstestStateMachineRole93D08A02",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"test-ecs-task-ecs-test-task","States":{"test-ecs-task-ecs-test-task":{"End":true,"Type":"Task","TimeoutSeconds":3600,"ResultPath":null,"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::ecs:runTask.sync","Parameters":{"Cluster":"",
              {
                "Fn::GetAtt": [
                  "testecstaskecstestClusterCBD4036C",
                  "Arn",
                ],
              },
              "","TaskDefinition":"test-stack-TEST-ecs-test","NetworkConfiguration":{"AwsvpcConfiguration":{"Subnets":["abc-123"],"SecurityGroups":["id-123"]}},"Overrides":{"ContainerOverrides":[{"Name":"test-ecs-task-ecs-test-TaskContainer"}]},"LaunchType":"FARGATE","PlatformVersion":"LATEST"}}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "testecstaskecstestStateMachineRole93D08A02",
            "Arn",
          ],
        },
        "StateMachineName": "ecs-test-TEST",
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "testecstaskecstestStateMachineRole93D08A02": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testecstaskecstestStateMachineRoleDefaultPolicy81B8C5B5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecs:RunTask",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        2,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        4,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        0,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                                    },
                                  ],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    "/",
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                                    },
                                  ],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    ":*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ecs:StopTask",
                "ecs:DescribeTasks",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "iam:PassRole",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "testecstaskecstestTaskDefinitionTaskRole4D626B6F",
                    "Arn",
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "testecstaskecstestTaskDefinitionExecutionRoleF588BC50",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "events:PutTargets",
                "events:PutRule",
                "events:DescribeRule",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":events:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":rule/StepFunctionsGetEventsForECSTaskRule",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testecstaskecstestStateMachineRoleDefaultPolicy81B8C5B5",
        "Roles": [
          {
            "Ref": "testecstaskecstestStateMachineRole93D08A02",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testecstaskecstestTaskDefinition4BF687D5": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "-c",
              "echo "yo ho row ho it's a pirates life for me"",
            ],
            "Cpu": 1024,
            "EntryPoint": [
              "/bin/sh",
            ],
            "Essential": true,
            "Image": "node:10",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "testecstaskecstestTaskDefinitiontestecstaskecstestTaskContainerLogGroup3F63585A",
                },
                "awslogs-region": {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "ecs-test",
              },
            },
            "Memory": 2048,
            "Name": "test-ecs-task-ecs-test-TaskContainer",
            "ReadonlyRootFilesystem": true,
          },
        ],
        "Cpu": "1024",
        "EphemeralStorage": {
          "SizeInGiB": 30,
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "testecstaskecstestTaskDefinitionExecutionRoleF588BC50",
            "Arn",
          ],
        },
        "Family": "test-stack-TEST-ecs-test",
        "Memory": "2048",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "RuntimePlatform": {
          "CpuArchitecture": "ARM64",
          "OperatingSystemFamily": "LINUX",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "testecstaskecstestTaskDefinitionTaskRole4D626B6F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "testecstaskecstestTaskDefinitionExecutionRoleDefaultPolicy85ED5386": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "testecstaskecstestTaskDefinitiontestecstaskecstestTaskContainerLogGroup3F63585A",
                  "Arn",
                ],
              },
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": "arn:aws:ecr:eu-west-1:694911143906:repository/aws-guardduty-agent-fargate",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testecstaskecstestTaskDefinitionExecutionRoleDefaultPolicy85ED5386",
        "Roles": [
          {
            "Ref": "testecstaskecstestTaskDefinitionExecutionRoleF588BC50",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testecstaskecstestTaskDefinitionExecutionRoleF588BC50": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testecstaskecstestTaskDefinitionTaskRole4D626B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testecstaskecstestTaskDefinitionTaskRoleDefaultPolicy65D034C8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "DistributionBucketName",
                    },
                    "/test-stack/TEST/ecs-test/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "databaseSecretArn",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testecstaskecstestTaskDefinitionTaskRoleDefaultPolicy65D034C8",
        "Roles": [
          {
            "Ref": "testecstaskecstestTaskDefinitionTaskRole4D626B6F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testecstaskecstestTaskDefinitiontestecstaskecstestTaskContainerLogGroup3F63585A": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 14,
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`The GuEcsTask pattern should support overriding the subnets used by the task 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuEcsTask",
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "testecstaskecstestStateMachineArnOutput": {
      "Value": {
        "Ref": "testecstaskecstestStateMachineC0B6383F",
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ecstestexecutionfailedC93F511B": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          "arn:something:else:here:we:goalarm-topic",
        ],
        "AlarmDescription": "ecs-test-TEST job failed ",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "testecstaskecstestStateMachineC0B6383F",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ExecutionsFailed",
        "Namespace": "AWS/States",
        "Period": 3600,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ecstesttimeoutFE335653": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          "arn:something:else:here:we:goalarm-topic",
        ],
        "AlarmDescription": "ecs-test-TEST job timed out ",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "StateMachineArn",
            "Value": {
              "Ref": "testecstaskecstestStateMachineC0B6383F",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ExecutionsTimedOut",
        "Namespace": "AWS/States",
        "Period": 3600,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testecstaskecstestCluster71BC62CB": {
      "Properties": {
        "CapacityProviders": [
          "FARGATE",
          "FARGATE_SPOT",
        ],
        "Cluster": {
          "Ref": "testecstaskecstestClusterCBD4036C",
        },
        "DefaultCapacityProviderStrategy": [],
      },
      "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
    },
    "testecstaskecstestClusterCBD4036C": {
      "Properties": {
        "ClusterName": "ecs-test-cluster-TEST",
        "ClusterSettings": [
          {
            "Name": "containerInsights",
            "Value": "disabled",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "testecstaskecstestStateMachineC0B6383F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "testecstaskecstestStateMachineRoleDefaultPolicy81B8C5B5",
        "testecstaskecstestStateMachineRole93D08A02",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"test-ecs-task-ecs-test-task","States":{"test-ecs-task-ecs-test-task":{"End":true,"Type":"Task","TimeoutSeconds":3600,"ResultPath":null,"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::ecs:runTask.sync","Parameters":{"Cluster":"",
              {
                "Fn::GetAtt": [
                  "testecstaskecstestClusterCBD4036C",
                  "Arn",
                ],
              },
              "","TaskDefinition":"test-stack-TEST-ecs-test","NetworkConfiguration":{"AwsvpcConfiguration":{"Subnets":["abc-123","def-456"],"SecurityGroups":["id-123"]}},"Overrides":{"ContainerOverrides":[{"Name":"test-ecs-task-ecs-test-TaskContainer"}]},"LaunchType":"FARGATE","PlatformVersion":"LATEST"}}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "testecstaskecstestStateMachineRole93D08A02",
            "Arn",
          ],
        },
        "StateMachineName": "ecs-test-TEST",
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "testecstaskecstestStateMachineRole93D08A02": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testecstaskecstestStateMachineRoleDefaultPolicy81B8C5B5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecs:RunTask",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        2,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        4,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                            },
                          ],
                        },
                      ],
                    },
                    ":",
                    {
                      "Fn::Select": [
                        0,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                                    },
                                  ],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    "/",
                    {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Select": [
                                5,
                                {
                                  "Fn::Split": [
                                    ":",
                                    {
                                      "Ref": "testecstaskecstestTaskDefinition4BF687D5",
                                    },
                                  ],
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    },
                    ":*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ecs:StopTask",
                "ecs:DescribeTasks",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "iam:PassRole",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "testecstaskecstestTaskDefinitionTaskRole4D626B6F",
                    "Arn",
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "testecstaskecstestTaskDefinitionExecutionRoleF588BC50",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "events:PutTargets",
                "events:PutRule",
                "events:DescribeRule",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":events:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":rule/StepFunctionsGetEventsForECSTaskRule",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testecstaskecstestStateMachineRoleDefaultPolicy81B8C5B5",
        "Roles": [
          {
            "Ref": "testecstaskecstestStateMachineRole93D08A02",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testecstaskecstestTaskDefinition4BF687D5": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Command": [
              "-c",
              "echo "yo ho row ho it's a pirates life for me"",
            ],
            "Cpu": 1024,
            "EntryPoint": [
              "/bin/sh",
            ],
            "Essential": true,
            "Image": "node:10",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "testecstaskecstestTaskDefinitiontestecstaskecstestTaskContainerLogGroup3F63585A",
                },
                "awslogs-region": {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "ecs-test",
              },
            },
            "Memory": 2048,
            "Name": "test-ecs-task-ecs-test-TaskContainer",
            "ReadonlyRootFilesystem": true,
          },
        ],
        "Cpu": "1024",
        "EphemeralStorage": {
          "SizeInGiB": 30,
        },
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "testecstaskecstestTaskDefinitionExecutionRoleF588BC50",
            "Arn",
          ],
        },
        "Family": "test-stack-TEST-ecs-test",
        "Memory": "2048",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "RuntimePlatform": {
          "CpuArchitecture": "ARM64",
          "OperatingSystemFamily": "LINUX",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "testecstaskecstestTaskDefinitionTaskRole4D626B6F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "testecstaskecstestTaskDefinitionExecutionRoleDefaultPolicy85ED5386": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "testecstaskecstestTaskDefinitiontestecstaskecstestTaskContainerLogGroup3F63585A",
                  "Arn",
                ],
              },
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": "arn:aws:ecr:eu-west-1:694911143906:repository/aws-guardduty-agent-fargate",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testecstaskecstestTaskDefinitionExecutionRoleDefaultPolicy85ED5386",
        "Roles": [
          {
            "Ref": "testecstaskecstestTaskDefinitionExecutionRoleF588BC50",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testecstaskecstestTaskDefinitionExecutionRoleF588BC50": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testecstaskecstestTaskDefinitionTaskRole4D626B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testecstaskecstestTaskDefinitionTaskRoleDefaultPolicy65D034C8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "DistributionBucketName",
                    },
                    "/test-stack/TEST/ecs-test/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "databaseSecretArn",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testecstaskecstestTaskDefinitionTaskRoleDefaultPolicy65D034C8",
        "Roles": [
          {
            "Ref": "testecstaskecstestTaskDefinitionTaskRole4D626B6F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testecstaskecstestTaskDefinitiontestecstaskecstestTaskContainerLogGroup3F63585A": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 14,
        "Tags": [
          {
            "Key": "App",
            "Value": "ecs-test",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
